updated the issues

--- a/Issues_1.Rmd
+++ b/Issues_1.Rmd
@@ -2,21 +2,22 @@
 title: "Errors/Issues in animint use for beginners"
 output:
   html_document:
-    df_print: paged
 ---
 ```{r}
 library(ggplot2)
 library(animint)
 ```
 
+```{r}
+#Issue 1:
+```
+
 
 ```{r warning=FALSE}
 gg_anm2_sel <- ggplot(df) + geom_line(aes(x=df$Trade.Date, y=df$USD.AF8.FUT, 
                                           linetype=df$bucket, clickSelects=df$bucket))
-                                          #problem with linetype & clickSelects=df$bucket 
-                                          #ok with linetype & clickSelects=bucket
+#problem with linetype & clickSelects=df$bucket  #ok with linetype & clickSelects=bucket
 plot <- list(plot=gg_anm2_sel)
-library(animint)
 structure(plot, class="animint")
 ```
 
@@ -26,7 +27,10 @@ gg_anm2_sel <- ggplot(df) + geom_line(aes(x=df$Trade.Date, y=df$USD.AF8.FUT,
 plot <- list(plot=gg_anm2_sel)
 library(animint)
 structure(plot, class="animint")
+#no error and graph opening correctly
+```
 
-##Giving correct grph with some warnings
+```{r}
+# Issue2: On scale_*_discrete, variables can't be changed by clicking on the legends
 ```
 
